# CTIris

./: .env.example  .gitignore  CLAUDE.md  README.md  cspell.json  docker-compose.yml  generate_env.py
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260509_01_initial_schema.py
ctiris_db/: README.md
ctiris_db/alembic/: env.py
ctiris_db/src/ctiris_db/: base.py
ctiris_db/src/ctiris_db.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
db-svc/: Dockerfile  README.md  pyproject.toml  seed_locations.py
db-svc/alembic/: env.py
db-svc/seeds/: README.md  location_relationships.json  sample_relationships.json  sector_identities.json  sector_relationships.json
db-svc/src/ctiris_db/: __init__.py
db-svc/src/ctiris_db/models/: feed.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
gateway/: Dockerfile  nginx.conf
hello-docker/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
hello-docker/src/: index.ts
ingestion-svc/: .dockerignore  .pylintrc  Dockerfile  README.md  api.py  db.py  requirements.txt  scheduler.py  sync.py  taxii_client.py
ingestion-svc/tests/: test_api.py  test_db.py  test_scheduler.py  test_sync.py  test_taxii_client.py
query-svc/: .dockerignore  Dockerfile  README.md  db.py  main.py  requirements-dev.txt  requirements.txt
query-svc/tests/: conftest.py  test_main.py
(+32 files in other folders)
